--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
     // https://script.google.com/macros/s/AKfycbwxToUTfmbTa0tRDAeQ5rkksQAmPBv2gKyNl2HkUR_XsZ2ECwYrZB8OOPaWxNhYMfMWew/exec
-    const SCRIPT_URL = 'YOUR_SCRIPT_URL_HERE';
+    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwxToUTfmbTa0tRDAeQ5rkksQAmPBv2gKyNl2HkUR_XsZ2ECwYrZB8OOPaWxNhYMfMWew/exec';
     
     // データを保存する配列（ローカル表示用）
     let inspectionData = [];
